--- a/DzkprojectV1/public/css/main.css
+++ b/DzkprojectV1/public/css/main.css
@@ -1412,8 +1412,10 @@ div[class*="col"] {
   left: 0;
   top: 0;
   right: 0;
-  transition: all 0.5s;
+  /* transition: all 0.5s; */
   z-index: 997;
+  background: #42b0f2;
+  box-shadow: -21.213px 21.213px 30px 0px rgba(158, 158, 158, 0.3);
 }
 
 @media (max-width: 1024px) {
@@ -1424,9 +1426,11 @@ div[class*="col"] {
 }
 
 #header.header-scrolled {
+    /*
   transition: all 0.5s;
   background: #42b0f2;
   box-shadow: -21.213px 21.213px 30px 0px rgba(158, 158, 158, 0.3);
+    */
 }
 
 .login-btn {
